--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@1,200&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
   <body>
       <button>Change user</button>
       <h1>Mirai Kuriyama my beloved</h1>
-    <img src="mirai.jpg" alt="Mirai Kuriyama my beloved">
+    <img src="media/mirai.jpg" alt="Mirai Kuriyama my beloved">
     <p id="XD"> Mirai kuriyama is <strong>very cute .w.</strong> </p>
     <p><a href="https://kyoukainokanata.fandom.com/wiki/Mirai_Kuriyama">Mirai Kuriyama</a> (栗山 未来, Kuriyama Mirai ) is the deuteragonist of the Kyoukai no Kanata series.
          She is a first-year student and a member of the school's Literary Club.
@@ -25,7 +25,7 @@
          </ul>
 
 <p>Basically, 2d waifu material man.. </p>
-<script src="main.js"></script>
+<script src="scripts/main.js"></script>
         </body>
 </html> 
 
