--- a/index.html
+++ b/index.html
@@ -2,30 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Website para inválidos</title>
+    <meta name="author" content="ItzNico a.k.a Keyz">
+    <meta name="description" content="This is my personal website where I'll be posting anything I really feel like doing, I hope you enjoy it or stay informed about me!">
     <link href="styles/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@1,200&display=swap" rel="stylesheet">
+    <html lang="en-US"></html>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
-      <button>Change user</button>
-      <h1>Mirai Kuriyama my beloved</h1>
-    <img src="media/mirai.jpg" alt="Mirai Kuriyama my beloved">
-    <p id="XD"> Mirai kuriyama is <strong>very cute .w.</strong> </p>
-    <p><a href="https://kyoukainokanata.fandom.com/wiki/Mirai_Kuriyama">Mirai Kuriyama</a> (栗山 未来, Kuriyama Mirai ) is the deuteragonist of the Kyoukai no Kanata series.
+    <button style="text-align:center;">Change user</button>
+    <div id="div1">
+      <a href="https://osu.ppy.sh/beatmapsets/323044#osu/747855"><h1>Mirai Kuriyama my beloved</h1></a>
+       <img src="media/mirai.jpg" alt="Mirai Kuriyama my beloved">
+      <p id="XD"> Mirai kuriyama is <strong>very cute .w.</strong> </p>
+      <p><a href="https://kyoukainokanata.fandom.com/wiki/Mirai_Kuriyama" title="Mirai Kuriyama my beloved" target="_blank">Mirai Kuriyama</a> (栗山 未来, Kuriyama Mirai ) is the deuteragonist of the Kyoukai no Kanata series.
          She is a first-year student and a member of the school's Literary Club.
          She comes from a bloodline of Spirit World Warriors who possess blood-manipulation abilities. However, because these abilities are considered heretical among the Spirit World Warrior clans, she is shunned.</p>
-         <p>Mirai Kuriyama:</p>
+         <h2 id="mirai">Mirai Kuriyama:</h2>
          <ul>
-        <li id="list1">is very cute</li>
-        <li id="list2">is very likeable</li>
-        <li id="list3">doesn't like spending money</li>
-        <li id="list4">Did I say she's cute?</li>  
+            <li id="list1">is very cute</li>
+            <li id="list2">is very likeable</li>
+            <li id="list3">doesn't like spending money</li>
+            <li id="list4">Did I say she's cute?</li>  
          </ul>
 
-<p>Basically, 2d waifu material man.. </p>
-<script src="scripts/main.js"></script>
-        </body>
+      <p>Basically, 2d waifu material man.. </p>
+    </div>
+    <div id="div2">
+      <a class="osuprof" href="osu-profile.html">Here's my osu profile, I hope you enjoy it</a>
+        
+</body>
 </html> 
 
